[gd_scene load_steps=6 format=3 uid="uid://onpdq474nw7j"]

[ext_resource type="Script" uid="uid://duuua5nfvr52a" path="res://Game/Scripts/enemy.gd" id="1_m1k7h"]
[ext_resource type="Texture2D" uid="uid://cmntacjybukvt" path="res://Assets/icon.svg" id="2_3kd8f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3"]
radius = 30.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 3
input_pickable = true
script = ExtResource("1_m1k7h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_3kd8f")

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = -50.0
offset_top = -45.0
offset_right = 50.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_2")

[node name="HitBox" type="Area2D" parent="." groups=["enemy", "enemy_hurtbox"]]
collision_layer = 2
collision_mask = 4
metadata/_edit_use_anchors_ = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_3")

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(50, 6)
offset_left = -25.0
offset_top = -30.0
offset_right = 25.0
offset_bottom = -24.0
show_percentage = false
